# bcs_security

./: .gitignore  BCS_521_FREEZE_TEST_VECTORS.py  BCS_CRT_17_19_RANK_FINDING.md  BCS_CRT_17_19_THEOREM.md  BCS_CRT_CHARACTER_SUM_CERTIFICATE.md  BCS_CT_DESIGN.md  BCS_CT_PROGRESS.md  BCS_GENERIC_RANK_PROOF.md  BCS_PROJECT_STATUS.md  BCS_RANK3_MINI_REPORT.md  BCS_WORLD_CLASS_ROADMAP.md  BCS_WORLD_LEVEL_RESEARCH_PLAN.md  Cargo.toml  README.md  bcs521_test_vectors.json  bcs_crt_rank3_analytic.csv  bcs_crt_rank_hunt_k20.csv  bcs_crt_rank_hunt_k20.md  bcs_crt_rank_table.csv  bcs_crt_selected_rank.csv  compute_kahf_dst.py  lmfdb_1424d1_full.html  quran_math.py  verify_kahf_dst.py
.devcontainer/: devcontainer.json
.github/workflows/: build-papers.yml  ci.yml
bcs-cli/: Cargo.toml  README.md
bcs-cli/src/: kahf_crypto.rs  keyfile.rs  main.rs
bcs-cli/src/commands/: ecdh.rs  hybrid_kem.rs  keygen.rs  mod.rs  security_info.rs  sign.rs  verify.rs
bcs-cli/tests/: e2e_ecdh.rs
bcs-core-rust/: .gitignore  AUDIT_CHECKLIST.md  AUDIT_RESULTS.md  BCS_PQ_ROADMAP.md  Cargo.toml  FORTRESS.md  HONEST_REASSESSMENT.md  README.md  SECURITY.md  SECURITY_COMPARISON.md  THREAT_MODEL.md  deny.toml
bcs-core-rust/benches/: ct_bench.rs  ecdh_compare.rs
bcs-core-rust/examples/: bcs256_ecdh_demo.rs  bcs521_ecdh_demo.rs  dudect_ct.rs
bcs-core-rust/fuzz/: Cargo.toml  README.md
bcs-core-rust/fuzz/fuzz_targets/: fuzz_ecdh_round_trip.rs  fuzz_parse_public_key.rs  fuzz_parse_secret_key.rs
bcs-core-rust/scripts/: audit_long_runs.sh  derive_mont_consts.py
bcs-core-rust/src/: api.rs  ecdsa.rs  hybrid.rs  kahf_seeded.rs  lib.rs
bcs-core-rust/src/ct/: aggressive_zeroize.rs  consts.rs  ecdsa.rs  execution_proof.rs  fault_injection.rs  fp521.rs  ladder.rs  masking.rs  mod.rs  point.rs  scalar.rs
bcs-core-rust/tests/: test_ct_parity.rs  test_ct_scalar_arith.rs  test_ct_smoke.rs  test_ecdsa.rs  test_proptest.rs  test_vectors_521.rs
bcs-demo/halal-cert-demo/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
bcs-demo/halal-cert-demo/src/: App.tsx  index.css
bcs-demo/halal-cert-demo/src/api/: shield.ts
bcs-demo/halal-cert-demo/src/pages/: AuditTrail.tsx  Home.tsx  IssueCert.tsx  KeyManager.tsx  VerifyCert.tsx
bcs-kahf-verify/: Cargo.toml
bcs-kahf-verify/src/: main.rs
bcs-papers/: PHASE7_SYNC_TO_CODESPACES.md  README.md
bcs-papers/arxiv-crt-17-19-rank-family/: README.md  paper.tex
bcs-papers/arxiv-pell-1424d1/: Makefile  README.md  paper.tex  references.bib
bcs-papers/iacr-eprint-bcs521-v2/: README.md  paper.tex  references.bib
bcs-research/world-class-validation/: README.md  RESEARCH_REPORT.md  bsd_numerical.py  bsd_results.json  curve_analysis.gp  curve_analysis.sage  curve_invariants.py  invariants_results.json  lmfdb_curve_match.json  lmfdb_raw.json  pari_verified.json  pell_bismillah_solver.py  pell_results.json  run_all.sh  sato_tate_results.json  sato_tate_test.py
bcs-research/world-class-validation/elliptic-family/: README_BCS_CODESPACE.md  bcs_codespace_sage.py  bcs_crt_character_sum_certificate.py  bcs_crt_rank4_hunt.py  bcs_crt_rank_hunt.py  bcs_crt_root_modular_analysis.py  bcs_crt_wide_rank_scan.py  bcs_family_quick.py
bcs-shield/: CAPABILITY_MATRIX.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
bcs-shield/src/: api.rs  crypto_service.rs  key_store.rs  main.rs  models.rs  shariah_audit.rs
bcs-spec/: BCS_MASTER_STATE.json  bcs-256.md  bcs-521-v2.md  bcs-521.md  known-limitations.md  test-vectors-bcs-256.json
bcs-spec/certificates/: kahf_seeded_certificate_128.json  kahf_seeded_certificate_256.json
bcs-spec/test-vectors-v2/: 01_canonical_seed_input.json  02_master_seed.json  03_candidate_kat.json  04_kahf_dst_kat.json  05_hkdf_sha512_kat.json  06_curve_params.json  INDEX.json
bcs-verify/: bcs256_sage_proof.sage  bcs521_pari_proof.gp  bcs521_pari_proof_result.txt  bcs521_sage_proof.sage  generate_bcs521_kats.py  pocklington_verify.py  twist_validation_policy.md
bcs-verify/kats/: bcs521_ecdsa.json
bcs521-v2-search/: README.md  kahf_seeded_certificate_521.json  kahf_seeded_checkpoint_128.json  kahf_seeded_checkpoint_256.json  kahf_seeded_checkpoint_521.json  kahf_seeded_search.py  run_tiers.sh  test_determinism.py
scripts/: verify_all.sh
