[package]
name = "bcs-core-rust"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "BCS research reference core for BCS-256 and BCS-521 with strict point validation"

[features]
default = []
# Enable the experimental constant-time (CT) implementation alongside the
# BigUint reference impl. When ON, all BCS-521 scalar multiplications and
# field ops route through `crate::ct::*`. The reference BigUint code remains
# available under `crate::reference::*` for parity testing.
ct = ["dep:subtle", "dep:zeroize"]
# Enable the hybrid post-quantum KEM (BCS-521 ECDH + ML-KEM-1024).
# Pulls in the `ml-kem` crate from RustCrypto.
hybrid = ["ct", "dep:ml-kem"]

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"
rand = "0.8"
sha2 = "0.10"
hkdf = "0.12"
hex = "0.4"
subtle  = { version = "2.5", optional = true, default-features = false }
zeroize = { version = "1.7", optional = true, features = ["zeroize_derive"] }
ml-kem  = { version = "0.2", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
aes-gcm    = "0.10"
serde_json = { version = "1", features = ["std"] }
serde      = { version = "1", features = ["derive"] }
criterion  = { version = "0.5", features = ["html_reports"] }
proptest   = "1.4"

[[example]]
name = "bcs521_ecdh_demo"
path = "examples/bcs521_ecdh_demo.rs"

[[example]]
name = "bcs256_ecdh_demo"
path = "examples/bcs256_ecdh_demo.rs"

[[bench]]
name = "ct_bench"
harness = false
required-features = ["ct"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
