[package]
name = "bcs-core-rust"
version = "0.2.0-fortress"
edition = "2021"
rust-version = "1.80.0"
license = "MIT OR Apache-2.0"
description = "BCS research reference core for BCS-256 and BCS-521 with strict point validation"

[features]
default = []
# Enable the experimental constant-time (CT) implementation alongside the
# BigUint reference impl. When ON, all BCS-521 scalar multiplications and
# field ops route through `crate::ct::*`. The reference BigUint code remains
# available under `crate::reference::*` for parity testing.
ct = ["dep:subtle", "dep:zeroize"]
# Enable the hybrid post-quantum KEM (BCS-521 ECDH + ML-KEM-1024).
# Pulls in the `ml-kem` crate from RustCrypto.
hybrid = ["ct", "dep:ml-kem"]
# Fortress: all security hardening enabled (CT + fault injection + DPA masking
# + aggressive zeroize + transparent execution proofs + PQ hybrid).
# This is the recommended feature for production deployments.
fortress = ["hybrid"]

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"
rand = "0.8"
sha2 = "0.10"
hkdf = "0.12"
hex = "0.4"
subtle  = { version = "2.5", optional = true, default-features = false }
zeroize = { version = "1.7", optional = true, features = ["zeroize_derive"] }
ml-kem  = { version = "0.2", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
aes-gcm    = "0.10"
serde_json = { version = "1", features = ["std"] }
serde      = { version = "1", features = ["derive"] }
criterion  = { version = "0.5", features = ["html_reports"] }
proptest   = "1.4"
# Dudect statistical timing-leak detector (PHASE C-1).
# Re-exports its own `rand` (currently 0.10) under `dudect_bencher::rand`,
# so the example below pulls no extra rand version into our public lockfile.
dudect-bencher = "0.7"
# Comparator curves for honest perf benchmarks (PHASE C-2).
# All RustCrypto / *ring* — pure-Rust, audit-mature, widely deployed.
p256             = { version = "0.13", default-features = false, features = ["ecdh", "arithmetic"] }
p521             = { version = "0.13", default-features = false, features = ["ecdh", "arithmetic"] }
k256             = { version = "0.13", default-features = false, features = ["ecdh", "arithmetic"] }
x25519-dalek     = { version = "2",    default-features = false, features = ["static_secrets"] }
elliptic-curve   = { version = "0.13", default-features = false }

[[example]]
name = "bcs521_ecdh_demo"
path = "examples/bcs521_ecdh_demo.rs"

[[example]]
name = "bcs256_ecdh_demo"
path = "examples/bcs256_ecdh_demo.rs"

# PHASE C-1 — dudect timing-leak harness.
# Run via:
#   cargo run --release --features ct --example dudect_ct -- --continuous bcs521_ecdh
[[example]]
name = "dudect_ct"
path = "examples/dudect_ct.rs"
required-features = ["ct"]

[[bench]]
name = "ct_bench"
harness = false
required-features = ["ct"]

# PHASE C-2 — honest perf vs. p256 / p521 / k256 / curve25519-dalek.
[[bench]]
name = "ecdh_compare"
harness = false
required-features = ["ct"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
