[package]
name = "bcs-shield"
version = "0.1.0-fortress"
edition = "2021"
rust-version = "1.80.0"
authors = ["Mohd Kamran Alam"]
description = "BCS Shield — Islamic Fintech Cryptographic Security Platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MohdKamranAlam/bcs_security"

[[bin]]
name = "bcs-shield"
path = "src/main.rs"

[dependencies]
bcs-core-rust = { path = "../bcs-core-rust", features = ["fortress", "hybrid"] }
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hkdf = "0.12"
hex = "0.4"
rand = "0.8"
zeroize = "1.7"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
